# time-series-modeling

./: .gitignore  Dockerfile  README.md  darts_config.py  darts_functions.py  darts_models.py  darts_results.py  pyproject.toml
notebooks/: darts_main.ipynb  prophet_holidays.ipynb
tests/: predict.py  predict_args.py  train_model.py
